--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <a href="https://linkedin.com/in/itsproali"><img src="./assets/linkedin.png" alt="linkedin"></a>
                 </div>
                 <p>2022 &copy; RP Alloys & steel forging</p>
-                <p>Developed by <a href="https://itsproali.netlify.app">Mohammad Ali</a></p>
+                <p>Developed by <a href="#">Aasim Ashraf</a></p>
             </div>
         </footer>
     </section>
